--- a/banking-platform/banking-platform/src/main/resources/application.yml
+++ b/banking-platform/banking-platform/src/main/resources/application.yml
@@ -1,13 +1,21 @@
+
 spring:
   application:
-    name=banking-platform:
+    name: banking-platform
 
   datasource:
     url: jdbc:mysql://localhost:3306/banking_db
     username: root
     password: root
-
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+    properties:
+      hibernate:
+        format_sql: true
+
+server:
+  port: 8083
